Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4489

Assert fails at Http2ConnectionState::delete_stream

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.2.0, 7.0.0
    • HTTP/2
    • None

    Description

      [Jun  1 01:22:32.441] Server {0x7fff79f5c000} DEBUG: <Http2ConnectionState.cc:1078 (send_a_data_frame)> (http2_con) [0] [13] End of DATA frame
      [Jun  1 01:22:32.441] Server {0x7fff79f5c000} DEBUG: <Http2ConnectionState.cc:1104 (send_data_frames)> (http2_cs) Shutdown stream 13
      FATAL: Http2ConnectionState.cc:949: failed assertion `client_streams_count > 0`
      Process 17085 stopped
      * thread #1: tid = 0x4101ba, 0x00007fff969e1f06 libsystem_kernel.dylib`__pthread_kill + 10, name = '[ET_NET 0]', queue = 'com.apple.main-thread', stop reason = signal SIGABRT
          frame #0: 0x00007fff969e1f06 libsystem_kernel.dylib`__pthread_kill + 10
      libsystem_kernel.dylib`__pthread_kill:
      ->  0x7fff969e1f06 <+10>: jae    0x7fff969e1f10            ; <+20>
          0x7fff969e1f08 <+12>: movq   %rax, %rdi
          0x7fff969e1f0b <+15>: jmp    0x7fff969dc7cd            ; cerror_nocancel
          0x7fff969e1f10 <+20>: retq   
      (lldb) bt
      * thread #1: tid = 0x4101ba, 0x00007fff969e1f06 libsystem_kernel.dylib`__pthread_kill + 10, name = '[ET_NET 0]', queue = 'com.apple.main-thread', stop reason = signal SIGABRT
        * frame #0: 0x00007fff969e1f06 libsystem_kernel.dylib`__pthread_kill + 10
          frame #1: 0x00007fff94c394ec libsystem_pthread.dylib`pthread_kill + 90
          frame #2: 0x00007fff8cf116e7 libsystem_c.dylib`abort + 129
          frame #3: 0x0000000000037c89 libtsutil.7.dylib`ink_abort(message_format="%s:%d: failed assertion `%s`") + 361 at ink_error.cc:79
          frame #4: 0x000000000003559f libtsutil.7.dylib`::_ink_assert(expression="client_streams_count > 0", file="Http2ConnectionState.cc", line=949) + 47 at ink_assert.cc:37
          frame #5: 0x00000001001a4fd6 traffic_server`Http2ConnectionState::delete_stream(this=0x0000000000973ea0, stream=0x0000000006f93800) + 198 at Http2ConnectionState.cc:949
          frame #6: 0x00000001001ae158 traffic_server`Http2Stream::do_io_close(this=0x0000000006f93800, (null)=-1) + 952 at Http2Stream.cc:271
          frame #7: 0x0000000100140baf traffic_server`HttpSM::tunnel_handler_ua(this=0x00000000070829f0, event=103, c=0x0000000007083d50) + 1999 at HttpSM.cc:3300
          frame #8: 0x000000010019645c traffic_server`HttpTunnel::consumer_handler(this=0x0000000007083d08, event=103, c=0x0000000007083d50) + 732 at HttpTunnel.cc:1376
      

      Attachments

        Issue Links

          Activity

            People

              masaori Masaori Koshiba
              maskit Masakazu Kitajo
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Slack

                  Issue deployment