TS-4489: Remove second calling of Http2ConnectionState::delete_stream in Http2Stream::do_io_close